<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/configuraci_n_del_servidor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="24dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direcci_n_ip"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etIp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/nr_ip"
                android:textSize="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/puerto"
            android:layout_marginBottom="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPort"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/puerto_text"
                android:textSize="48dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="#00B8D4"
            android:text="@string/guardar_configuraci_n"
            android:textColorLink="#304FFE" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#21201F"
            android:text="@string/restablecer_valores_button"
            android:textColor="#F6F3F3"
            android:textColorLink="#070707" />

        <TextView
            android:id="@+id/tvRutaActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/url_actual_text"
            android:textStyle="bold"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/tvRutaEjemplo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ruta_ejemplo"
            android:textColor="#666666"
            android:textSize="12sp" />

    </LinearLayout>

</ScrollView>